# nix-taffybar-template

./: .envrc  .gitignore  Justfile  LICENSE  README.md  flake.nix  nix-taffybar-template.cabal  taffybar.css  taffybar.hs
.github/workflows/: nix-build.yml
