cabal-version:      2.4
name:               nix-taffybar-template
version:            0.1.0.0
synopsis:           Minimal project-style taffybar setup with Nix flakes
description:        A clean starting point for a custom taffybar binary.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Taffybar contributors
maintainer:         taffybar@users.noreply.github.com
build-type:         Simple
extra-source-files: README.md

data-files:
  taffybar.css

executable taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  other-modules:       Paths_nix_taffybar_template
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.14 && <5
                     , data-default
                     , taffybar
  default-language:    Haskell2010
